--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-beautifulsoup4==4.9.3
-bs4==0.0.1
-lxml==4.9.3
 python-dotenv==0.17.1
-requests==2.23.0
 selenium==4.0.0a1
 webdriver-manager==4.0.1
+
+# beautifulsoup4==4.9.3
+# bs4==0.0.1
+# lxml==4.9.3
+# requests==2.23.0
