req yrs of exp OpenAI API ChatGPT

--- a/env.example
+++ b/env.example
@@ -1,4 +1,6 @@
 LinkedIn_USER_NAME=username
 LinkedIn_PASSWORD=password
-MINIMUM_ACCEPTABLE_PAY=250 # $250,000.00 in USD 
+MINIMUM_ACCEPTABLE_PAY=250 # e.g. $250,000.00 in USD 
+TOTAL_YEARS_OF_EXPERIENCE=4 # e.g. 5 years; Do not put a decimal point number
 URL="<Please copy and paste the dynamic URL from LinkedIn that includes your pertinent job search filters>"
+CHATGPT_API_KEY=api_key
