--- a/.gitignore
+++ b/.gitignore
@@ -176,5 +176,6 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 
-jobs.txt
-jobs1.txt
+# Ignore data files
+*.txt
+*.json
